--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-
     "name": "umeditor",
     "title": "umeditor",
     "description": "umeditor",
@@ -27,10 +26,7 @@
         "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-cssmin": "~0.6.0",
         "grunt-closurecompiler": "~0.9.9",
-        "grunt-contrib-copy": "~0.4.0",
-        "grunt-transcoding": "~0.1.1",
-        "grunt-text-replace": "~0.3.9",
-        "grunt-contrib-compress": "~0.7.0"
+        "grunt-contrib-copy": "~0.4.0"
     },
     "devDependencies": {
         "grunt": "~0.4.1"
