--- a/package.json
+++ b/package.json
@@ -1,34 +1,25 @@
 {
-    "name": "umeditor",
-    "title": "umeditor",
-    "description": "umeditor",
-    "version": "1.2.2",
-    "homepage": "https://github.com/fex-team/umeditor",
-    "author": {
-        "name": "f-cube @ FEX",
-        "url": "http://fex.baidu.com"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/fex-team/umeditor.git"
-    },
-    "keywords": [
-        "umeditor",
-        "web editor",
-        "ueditor",
-        "javascript"
-    ],
-    "bugs": {
-        "url": "https://github.com/fex-team/umeditor/issues"
-    },
-    "dependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-cssmin": "~0.6.0",
-        "grunt-closurecompiler": "~0.9.9",
-        "grunt-contrib-copy": "~0.4.0"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.1"
-    }
+  "name": "seditor",
+  "title": "seditor",
+  "description": "seditor",
+  "version": "1.0.0",
+  "homepage": "https://github.com/casoa/seditor",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/casoa/seditor.git"
+  },
+  "keywords": [
+    "seditor"
+  ],
+  "bugs": {
+    "url": "https://github.com/casoa/seditor/issues"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-closurecompiler": "^0.9.9",
+    "grunt-contrib-copy": "^0.8.2"
+  }
 }
